--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+html,
+body {
+	font-size: 20px;
+	font-family: 700;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.divider:after,
+.divider:before {
+	content: "";
+	flex: 1;
+	height: 1px;
+	background: #eee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.h-custom {
+	height: calc(100% - 73px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (max-width: 450px) {
+	.h-custom {
+		height: 100%;
+	}
 }
 
-.App-link {
-  color: #61dafb;
+.form-outline {
+	position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-label {
+	position: absolute;
+	top: 7%;
+	left: 2.6rem;
+	color: rgb(173, 173, 173);
+	pointer-events: none;
+	user-select: none;
+	transition: 0.25s ease;
+}
+
+.form-control:not(:placeholder-shown) + .form-label,
+.form-control:focus + .form-label {
+	top: 5px;
+	color: rgb(68, 67, 67);
+	background-color: #fff;
+	padding: 2px 3px;
+}
+
+.weather-main {
+	width: 30vw;
+	height: 70vh;
+	margin: 0 auto;
+	padding-top: 6rem;
+	position: relative;
+	padding: 1rem;
+}
+
+.bi-search,
+.bi-mic {
+	cursor: pointer;
+}
+
+.bi-mic,
+.bi-search {
+	position: absolute;
+	top: 7%;
+}
+
+.bi-search {
+	right: 80px;
+}
+
+.bi-mic {
+	right: 50px;
+}
+
+.bi-search:hover,
+.bi-mic:hover {
+	color: rgb(255, 0, 0);
+}
+
+.list-weather {
+	text-align: center;
+	margin-top: 2rem;
+}
+
+.vanta {
+	opacity: 1;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.weather-main h1 {
+	color: rgb(228, 21, 21);
+}
+
+.weather-main p {
+	color: black;
+}
+
+#form {
+	background-color: #fff;
+	position: absolute;
+	top: 4rem;
+	right: 0;
+	padding: 2rem;
+	border-radius: 0.7rem;
+	opacity: 0.9;
 }
