--- a/src/quy/components/Calo.css
+++ b/src/quy/components/Calo.css
@@ -4,6 +4,10 @@
     height: 100vh;
     width: 100%;
 }
+.calo-ctn::-webkit-scrollbar {
+    width: 0 !important;
+    display: none;
+}
 .calo-menu{
     background-color: #f9dcdcc4;
     width: 700px;
