--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@ body {
 	font-family: 700;
 	font-family: Arial, Helvetica, sans-serif;
 }
+body::-webkit-scrollbar{
+	width: 0 !important;
+    display: none;
+}
 .App::-webkit-scrollbar {
     width: 0 !important;
     display: none;
