--- a/src/App.css
+++ b/src/App.css
@@ -1,117 +1,117 @@
 html,
 body {
-	font-size: 20px;
-	font-family: 700;
-	font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-family: 700;
+  font-family: "Roboto", sans-serif;
 }
-body::-webkit-scrollbar{
-	width: 0 !important;
-    display: none;
+body::-webkit-scrollbar {
+  width: 0 !important;
+  display: none;
 }
 .App::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
 
 .divider:after,
 .divider:before {
-	content: "";
-	flex: 1;
-	height: 1px;
-	background: #eee;
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
 }
 
 .h-custom {
-	height: calc(100% - 73px);
+  height: calc(100% - 73px);
 }
 
 @media (max-width: 450px) {
-	.h-custom {
-		height: 100%;
-	}
+  .h-custom {
+    height: 100%;
+  }
 }
 
 .form-outline {
-	position: relative;
+  position: relative;
 }
 
 .form-label {
-	position: absolute;
-	top: 7%;
-	left: 2.6rem;
-	color: rgb(173, 173, 173);
-	pointer-events: none;
-	user-select: none;
-	transition: 0.25s ease;
+  position: absolute;
+  top: 7%;
+  left: 2.6rem;
+  color: rgb(173, 173, 173);
+  pointer-events: none;
+  user-select: none;
+  transition: 0.25s ease;
 }
 
 .form-control:not(:placeholder-shown) + .form-label,
 .form-control:focus + .form-label {
-	top: 5px;
-	color: rgb(68, 67, 67);
-	background-color: #fff;
-	padding: 2px 3px;
+  top: 5px;
+  color: rgb(68, 67, 67);
+  background-color: #fff;
+  padding: 2px 3px;
 }
 
 .weather-main {
-	width: 30vw;
-	height: 70vh;
-	margin: 0 auto;
-	padding-top: 6rem;
-	position: relative;
-	padding: 1rem;
+  width: 30vw;
+  height: 70vh;
+  margin: 0 auto;
+  padding-top: 6rem;
+  position: relative;
+  padding: 1rem;
 }
 
 .bi-search,
 .bi-mic {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .bi-mic,
 .bi-search {
-	position: absolute;
-	top: 7%;
+  position: absolute;
+  top: 7%;
 }
 
 .bi-search {
-	right: 80px;
+  right: 80px;
 }
 
 .bi-mic {
-	right: 50px;
+  right: 50px;
 }
 
 .bi-search:hover,
 .bi-mic:hover {
-	color: rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
 }
 
 .list-weather {
-	text-align: center;
-	margin-top: 2rem;
+  text-align: center;
+  margin-top: 2rem;
 }
 
 .vanta {
-	opacity: 1;
-	position: absolute;
-	width: 100%;
-	height: 100%;
+  opacity: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .weather-main h1 {
-	color: rgb(228, 21, 21);
+  color: rgb(228, 21, 21);
 }
 
 .weather-main p {
-	color: black;
+  color: black;
 }
 
 #form {
-	background-color: #fff;
-	position: absolute;
-	top: 4rem;
-	right: 0;
-	padding: 2rem;
-	border-radius: 0.7rem;
-	opacity: 0.9;
+  background-color: #fff;
+  position: absolute;
+  top: 4rem;
+  right: 0;
+  padding: 2rem;
+  border-radius: 0.7rem;
+  opacity: 0.9;
 }
