--- a/src/quy/components/Calo.css
+++ b/src/quy/components/Calo.css
@@ -1,143 +1,191 @@
-.calo-ctn{
-    background-image: url('../img/korean-dish-with-copy-space-2210x1475.jpg');
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
+.calo-ctn {
+  background-image: url("../img/korean-dish-with-copy-space-2210x1475.jpg");
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
 }
 .calo-ctn::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
-.calo-menu{
-    background-color: #f9dcdcc4;
-    width: 700px;
-    height: 700px;
-    position: absolute;
-    top: 15%;
-    left: 15%;
-    padding: 16px;
-    border-radius: 15px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+.calo-menu {
+  /* background-color: #f9dcdcc4; */
+  background: rgba(193, 209, 193, 0.55);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  /* -webkit-backdrop-filter: blur(8px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  /*  */
+  width: 700px;
+  height: 700px;
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  padding: 16px;
+  border-radius: 15px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 .calo-menu::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
-.calo-menu-title{
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 30px;
-    FONT-FAMILY: system-ui;
-    
+.calo-menu-title {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: system-ui;
 }
-.chart-servings-container{
-    position: relative;
-    width: 700px;
-    height: 700px;
-    left: 60%;
-    top: 15%;
-    perspective: 1000;
+.chart-servings-container {
+  position: relative;
+  width: 700px;
+  height: 700px;
+  left: 60%;
+  top: 15%;
+  perspective: 1000;
 }
 .chart-servings-container::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
-.swap.chart-servings{
-    transform:rotateY(180deg);
+.swap.chart-servings {
+  transform: rotateY(180deg);
 }
 
-.chart-servings{
-    position: relative;
-    width: 700px;
-    height: 700px;
-    transition: 0.6s;
-	transform-style: preserve-3d;
-    
+.chart-servings {
+  position: relative;
+  width: 700px;
+  height: 700px;
+  transition: 0.6s;
+  transform-style: preserve-3d;
 }
 .chart-servings::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
 
-.chart{
-  
-    /* background-color: #f9dcdcc4; */
-    width: 700px;
-    height: 700px;
-    position: absolute;
-    /* top: 15%; */
-    /* left: 60%; */
-    padding: 16px;
-    border-radius: 15px;
-    backface-visibility: hidden;
-
+.chart {
+  /* background-color: #f9dcdcc4; */
+  width: 700px;
+  height: 700px;
+  position: absolute;
+  /* top: 15%; */
+  /* left: 60%; */
+  padding: 16px;
+  border-radius: 15px;
+  backface-visibility: hidden;
 }
-.servings{
-    background-color: #f9dcdcc4;
-    width: 700px;
-    height: 700px;
-    position: absolute;
-    /* top: 15%; */
-    /* left: 60%; */
-    padding: 16px;
-    border-radius: 15px;
-    transform: rotateY(180deg);
-    backface-visibility: hidden;
-    overflow-x: hidden;
-    overflow-y: scroll;
+.servings {
+  /* background-color: #f9dcdcc4; */
+  width: 700px;
+  height: 700px;
+  position: absolute;
+  /* top: 15%; */
+  /* left: 60%; */
+  padding: 16px;
+  border-radius: 15px;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  /*  */
+  background: rgba(193, 209, 193, 0.55);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  /* -webkit-backdrop-filter: blur(8px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .servings::-webkit-scrollbar {
-    width: 0 !important;
-    display: none;
+  width: 0 !important;
+  display: none;
 }
-.calocurrent-text{
-    font-size: 61px;
-    position: absolute;
-    top: 45%;
-    left: 38%;
-    color: green;
-    text-align: center;
-    width: 183px;
-    height: 100px;
+.calocurrent-text {
+  font-size: 61px;
+  position: absolute;
+  top: 45%;
+  left: 38%;
+  color: green;
+  text-align: center;
+  width: 183px;
+  height: 100px;
 }
-.input::placeholder{
-    color: #000;
 
+.swap-btn {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 50px;
+  height: 50px;
+  /* background-color: #bdccd8; */
+  border-radius: 5px;
+  z-index: 10;
 }
-.swap-btn{
-    position: absolute;
-    top:5px;
-    left:5px;
-    width: 50px;
-    height: 50px;
-    /* background-color: #bdccd8; */
-    border-radius: 5px;
-    z-index: 10;
+.swap-btn > i::before {
+  font-size: 33px;
+  color: white;
+  cursor: pointer;
 }
-.swap-btn >i::before{
-    font-size: 33px;
-    color: white;
-    cursor: pointer;
+.servings-title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.servings-title{
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 50px;
+.save-btn {
+  /* background-color: aqua; */
+  width: 60px;
+  height: 40px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 2px;
+  margin-left: 44%;
+  margin-bottom: 15px;
+  background: rgba(46, 88, 194, 0.6);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6.5px);
+  -webkit-backdrop-filter: blur(6.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.save-btn{
-    background-color: aqua;
-    width: 60px;
-    height: 40px;
-    border-radius: 5px;
-    text-align: center;
-    padding-top: 2px;
-    margin-left: 44%;
+.save-btn:hover {
+  scale: 1.1;
+  opacity: 0.7;
+  cursor: pointer;
 }
-.save-btn:hover{
-scale: 1.1;
-opacity: 0.7;
-cursor: pointer;
+.fooditem-button-servings {
+  margin-left: 179px;
+  width: 129px;
+  height: 38px;
+  color: blue;
+  border: none;
+  border-radius: 6px;
+}
+.trash-ic::before {
+  padding-right: 10px;
+}
+.nodata-noti {
+  position: relative;
+  text-align: center;
+  width: 200% !important;
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+.calo-menu--searchfood {
+  border: none;
+  background-color: transparent;
+}
+.calo-menu--searchfood::placeholder {
+  color: #000;
+}
+.calo-menu--searchfood:focus {
+  outline: none;
+}
+.calo-menu--searchfood--ctn {
+  margin-bottom: 20px;
+  border-bottom: 1px solid;
+  color: #000;
+  width: 260px;
 }
