--- a/src/quy/components/Tdee.css
+++ b/src/quy/components/Tdee.css
@@ -1,65 +1,124 @@
-.tdee-ctn{
-    background-image: url('../img/6071965.png');
-    background-size: cover;
+.tdee-ctn {
+  background-image: url("../img/6071965.png");
+  background-size: cover;
   height: 100vh;
   width: 100%;
   position: relative;
 }
-.tdee-cal{
-    width: 407px;
-    height: 432px;
-    left: 47%;
-    top: 20%;
-    background-color:  #e6e6dec4;
-    box-sizing: border-box;
-    padding: 10px;
-    position: absolute;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 16px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    justify-content: space-around;
-    font-weight: bold;
+.tdee-cal {
+  width: 407px;
+  height: 495px;
+  left: 47%;
+  top: 20%;
+  /* background-color:  #e6e6dec4; */
+  box-sizing: border-box;
+  padding: 10px 17px 10px 10px;
+  position: absolute;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  justify-content: space-around;
+  font-weight: bold;
+  background: rgba(193, 209, 193, 0.55);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  /* -webkit-backdrop-filter: blur(8px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.tdee-cal-input{
-    border-radius: 5px;
-    border: 1px solid #000;
-}
-.tdee-define{
-    width: 407px;
-    height: 432px;
-    left: 72%;
-    top: 20%;
-    background-color:  #e6e6dec4;
-    box-sizing: border-box;
-    padding: 10px;
-    position: absolute;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 16px;
-    border-radius: 10px;
 
+.tdee-define {
+  width: 407px;
+  height: 432px;
+  left: 72%;
+  top: 20%;
+  /* background-color: #e6e6dec4; */
+  box-sizing: border-box;
+  padding: 10px;
+  position: absolute;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
+  border-radius: 10px;
+  background: rgba(193, 209, 193, 0.55);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  /* -webkit-backdrop-filter: blur(8px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.tdee-result{
-    width: 407px;
-    height: 432px;
-    left: 72%;
-    top: 20%;
-    background-color:  #e6e6dec4;
-    box-sizing: border-box;
-    padding: 10px;
-    position: absolute;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 16px;
-    border-radius: 10px;
+.tdee-result {
+  width: 407px;
+  height: 432px;
+  left: 72%;
+  top: 20%;
+  /* background-color: #e6e6dec4; */
+  box-sizing: border-box;
+  padding: 10px;
+  position: absolute;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
+  border-radius: 10px;
+  background: rgba(193, 209, 193, 0.55);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  /* -webkit-backdrop-filter: blur(8px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-#submitBtn{
-background-color: green;
-color: #fff;
-border-radius: 5px;
-border: none;
+#submitBtn {
+  background-color: green;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  margin-top: 14px;
 }
-#submitBtn:hover{
-    cursor: pointer;
-    opacity: 0.8;
+#submitBtn:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+.fooditem-row-tdee {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 47px;
+  margin: 10px 0;
+}
+.fooditem-col-tdee {
+  width: 35%;
+}
+.tdee-cal-input {
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+#gender,
+.tdee-cal-input {
+  width: 174px;
+  height: 40px;
+  border: 1px solid;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
+  margin-left: -16px;
+}
+
+.tdee-cal-input-secord {
+  width: 94%;
+  height: 40px;
+  border: 1px solid;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
+  margin-left: 17px;
+}
+.tdee-cal-input::placeholder {
+  font-size: 14px;
+  color: #000;
+}
+#gender > option {
+  border: 1px solid;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
 }
